--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,73 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 50vmin;
-  pointer-events: none;
+.App-container {
+    height: 100vh;
+    width: 100vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Header-container {
+    width: 100%;
+    height: 90px;
+    background-color: #232323;  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Header-container .Navbar{
+    padding: 1.5rem 0rem;
 }
 
-.App-name {
-  font-size: 32px;
-  color: #61dafb;
+.Header-container .Navbar .Logo em {
+    color: #f33f3f;
+    font-style: normal;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header-container .Navbar .Logo {
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 1.7rem;
+    font-weight: 800;
+    cursor: pointer;
+    float: left;
+    padding-left: 9rem;
+}
+
+.Navbar .Nav-list{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    padding-left: 6rem;
+}
+
+.Navbar .Nav-list li {
+    letter-spacing: 0.5px;
+    margin: 1rem 1.5rem;
+    cursor: pointer;
+    color: #fff;
+}
+
+.Navbar .Underline-hover li {
+    display: inline-block;
+    position: relative;
+}
+
+.Navbar .Underline-hover li::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    background-color: #f33f3f; 
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.Navbar .Underline-hover li:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
