--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
     margin: 0;
@@ -154,10 +153,9 @@
 }
 
 .App-container .Item-container {
-    display: flex;
+    display: inline-flex;
 	justify-content: center;
     align-items: center;
-    flex-flow: wrap;
 }
 
 .App-container .Items-title {
@@ -168,7 +166,7 @@
 .App-container .Item-container .Product-card {
     margin: 1rem;
     width: 275px;
-    height: 370px;
+    height: 410px;
     min-height: auto;
     min-width: auto;
     cursor: pointer;
@@ -186,6 +184,7 @@
 
 .App-container .Item-container .Product-card .Item-name {
     padding-left: 1rem;
+    padding-top: 1rem;
     font-weight: 300;
 }
 
@@ -193,4 +192,8 @@
     padding-left: 1rem;
     font-weight: 600;
     font-size: 1.3rem;
+}
+
+.App-container .Item-container .Product-card .Item-description {
+    padding-left: 10px;
 }
